clusters/gaia/apps/atuin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: atuin
  labels:
    tailscale: true
