clusters/gaia/apps/atuin/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: postgresql
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: atuin
        - name: POSTGRES_PASSWORD
        - name: POSTGRES_USER
        image: postgres:14
        imagePullPolicy: ""
        name: postgresql
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/
          name: atuin-database
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: atuin-database
        persistentVolumeClaim:
          claimName: atuin-database
status: {}
