clusters/gaia/apps/atuin/atuin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin
  namespace: atuin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: atuin.gaia.devusb.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atuin
            port:
              number: 8888
  tls:
  - hosts:
    - atuin.gaia.devusb.us
    secretName: atuin-tls
